# Data-Analysis

./: .gitignore  Data Analysis.sln  Data_Analysis.pyproj  Data_Analysis.sln  MANIFEST.in  README.md  UpgradeLog.htm  configCC.json  configOD.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
data_analysis/: .gitignore  CC.py  CellACDCSpotMAXana.py  CellACDCana.py  Data_Analysis.py  OD.py  OD_measurements_example.xlsx  _version.py  configCC.json  configOD.json  configload.py  configspotMAX.json  core.py  run.py  spotMAX.py  spotMAXana.py
src/: Data Analysis.pyproj  Data_Analysis.py  Data_Analysis.pyproj  README.md  run.py
