[metadata]
name = src
author = Timon Stegmaier
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
python_requires =
    >=3.8
include_package_data = True
install_requires =
    matplotlib
    pandas

[options.entry_points]
console_scripts =
    data_analysis = src.Data_Analysis:run
