[metadata]
name = data_analysis
author = Timon Stegmaier
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
python_requires =
    >=3.8
include_package_data = True
install_requires =
    contourpy==1.0.7
    cycler==0.11.0
    et-xmlfile==1.1.0
    fonttools==4.39.4
    fsspec==2023.5.0
    kiwisolver==1.4.4
    matplotlib==3.7.1
    numpy==1.24.3
    openpyxl==3.1.2
    packaging==23.1
    pandas==2.0.1
    Pillow==9.5.0
    pip==23.1.2
    pyparsing==3.0.9
    python-dateutil==2.8.2
    pytz==2023.3
    regex==2023.5.5
    scipi==3.0
    scipy==1.10.1
    setuptools==65.5.0
    six==1.16.0
    tzdata==2023.3

[options.entry_points]
console_scripts =
    odplot = Data_Analysis:odplot
    ODtime = Data_Analysis:doublingtime
    CC_tog = Data_Analysis:coulterocunter_together
    CC = Data_Analysis:coulterocunter
    openpath = Data_Analysis:openpath
    openexpath = Data_Analysis:openexpath
    config = Data_Analysis:openconfig
